Kubernetes/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
      tier: frontend
      track: stable

  template:
    metadata:
      name: frontend
      labels:
        app: devops
        tier: frontend
        track: stable
    spec:
      containers:
        - name: devops
          image: oussama24/users-app_frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend-port
              containerPort: 3000 
          resources: {""}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
    
spec:
    type: NodePort
    ports:
      - protocol: TCP
        port: 3000
        targetPort: 3000
        nodePort: 30200
    selector:
      app: devops
      tier: frontend
